1.1.1
- deconstruction of broken stops properly removes stop and surrounding I/O entities
- automatically remove orphaned lamp control entities
- speed up loading by skipping parts of initialization according to old_version

1.1.0
- added finish_loading to config: prevents trains from leaving while inserters are working by adding 2s inactivity

1.0.1
- fixed possible errors with mods changing the base train stop recipe

1.0.0
- Dispatcher uses linear distance between depot and provider when choosing between equally valid trains
- localized console Messages for log levels 1, 2 and 3
- localized Items & Fluids in Messages (thanks to MagmaMcFry)
- added signal "Locked Slots per Wagon"

0.10.2
- train composition signals factor in train direction, so the lowest bit always represents the entity next to the stop
- changed "(UpdateStopParkedTrain): couldn't assign train id" to debug level

0.10.1
- increased performance by reading wagons inventory size from data.raw (thanks to folk)

0.10.0
- added Limit Trains signal to Provider & Requester

0.9.13
- fixed: ignore min delivery size signal being ignored
- fixed: error when disabling RailTanker Mod

0.9.12
- fixed possible variable conflicts https://forums.factorio.com/viewtopic.php?f=23&t=43392

0.9.11
- message filter uses message age instead of message count to suppress messages
- increased detailed messages about order generation from log level 3 to 4

0.9.10
- adapted to creative mode 0.2.8
- fixed invalid entity in on_robot_built_entity

0.9.9
- fixed: attempt to get length of field 'activeDeliveries' (a number value) on log level >= 3

0.9.8
- fixed: error on schedules with circuit wait conditions containing virtual signals

0.9.7
- fixed: all stops constantly being set to Ignore Minimum Delivery Size
- sorted signal order
- reduced default stop_timeout to 2min

0.9.6
- added Ignore Minimum Delivery Size signal for providers

0.9.5