@@ -38,6 +38,7 @@ error-stop-orientation = [LTN] Error: invalid Train Stop Orientation __1__.
 error-parse-item = [LTN] Error: could not parse item __1__.
 error-no-railtanker = [LTN] Error: Skipping __1__. Fluid transport requires RailTanker Mod.
 error-no-stop = [LTN] Error: Couldn't get provider or requester stop.
+error-invalid-stop = [LTN] Error: Invalid stop: __1__
 
 no-provider-found = [LTN] No station supplying __1__ found.
 provider-found = [LTN] Provider __1__: Priority __2__, __3__ deliveries, __4__ __5__ available.
